--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -18,6 +18,13 @@
     <item row="0" column="0">
      <widget class="QTableView" name="tv_books"/>
     </item>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="pb_add">
+      <property name="text">
+       <string>Добавить</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
